fix: shift bottom-right circle slightly to the left

--- a/src/styles/pages/ButterflyLetters.css
+++ b/src/styles/pages/ButterflyLetters.css
@@ -526,6 +526,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-right: 40px;
   overflow: visible;
 }
 
